[project]
name = "TopoHelper"
version = "0.2.0"
description = "自然语言 → 网络配置 MCP 工具"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
topohelper-mcp = "mcp_server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mcp_server", "tools", "telnet"]
